fix petition snipe overflowing width on phones

--- a/src/app.css
+++ b/src/app.css
@@ -71,7 +71,7 @@ nav img {
   color: white;
   padding: 1em;
   text-align: center;
-  width: 300px;
+  max-width: 300px;
   margin-left: auto;
   margin-right: auto;
 }
